# daemoni_c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ast
include/ast/: ASTNode.h
include/codegen/: Codegen.h
include/lexer/: Lexer.h  Token.h  TokenType.h
include/parser/: Parser.h
include/sema/: SemanticAnalyzer.h
src/: CMakeLists.txt
src/codegen/: Codegen.cpp
src/driver/: main.cpp
src/lexer/: Lexer.cpp
src/parser/: Parser.cpp
src/sema/: SemanticAnalyzer.cpp
tests/: test.dmnc
